# teoneo-messages

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  dockerfile
src/: main.rs
